[part-3] added roles for authorized access (annotations in controller)